<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:baselineAligned="false"
    android:alpha="255"
    android:background="@drawable/parkitbg2">

    <!-- Username textfield   -->

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:hint=" Username"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:layout_height="50dp"
        android:background="#d9ffffff"
        android:alpha="191"
        android:textColor="#631343"
        android:textColorHint="#000000" />

    <!-- Password textfield   -->

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:hint=" Password"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:background="#d9ffffff"
        android:alpha="192"
        android:paddingLeft="10dp"
        android:textColor="#631343"
        android:textColorHint="#000000" />

    <!-- Login Button   -->

    <Button
        android:id="@+id/bLogin"
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#631343" />

    <!-- Register Here Button   -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:text="Register Here"
            android:textStyle="bold"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginRight="34dp"
            android:layout_marginEnd="34dp"
            android:paddingTop="9dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
