<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:background="#631343"
        android:weightSum="1">

        <!-- Search textfield   -->

        <EditText
            android:id="@+id/TFaddress"
            android:layout_width="269dp"
            android:hint="@string/exampleAddress"
            android:layout_height="match_parent"
            android:layout_weight="0.92"
            android:textColor="#ffffff"
            android:imeOptions="actionGo"
            android:textColorHint="#ffffff"
            android:background="#00000000"
            android:singleLine="true"
            android:paddingLeft="10dp"/>

        <!-- Search Button   -->

        <Button

            android:id="@+id/Bsearch"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:onClick="onSearch"
            android:text="Search It!"
            android:background="#ffffff"
            android:textColor="#631343"/>


    </LinearLayout>

    <!-- Map  -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!-- Google Map API -->

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".MapsActivity">

            <!-- Disappearing Seller button   -->

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sell It!"
                android:layout_gravity="bottom|left"
                android:background="#ffffff"
                android:textColor="#631343"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>

            <!-- Profile/Logout Button   -->

            <Button
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile!"
                android:layout_gravity="bottom|right"
                android:background="#ffffff"
                android:textColor="#631343"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>

        </fragment>


    </LinearLayout>
</LinearLayout>