<resources>
    <string name="app_name">Parking Lot</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">PARK IT!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activitydelete">Map</string>
    <string name="site_url">http://cse110gogogo.web44.net/</string>

    <string name="dialog_name">Name</string>
    <string name="editText_nameHint">First Last</string>
    <string name="dialog_phone">Phone</string>
    <string name="editText_phoneHint">(888) 888&#8211;8888</string>
    <string name="dialog_start">Start-End Dates</string>
    <string name="set_start_date">Set Date</string>
    <string name="set_start_time">Set Time</string>
    <string name="dialog_end">Start-End Times</string>
    <string name="dialog_rate">Rate</string>
    <string name="editText_rateHint">0.00</string>
    <string name="pick_start_time">00:00</string>
    <string name="pick_end_time">23:59</string>
    <string name="pick_end_date">2015/11/12</string>
    <string name="pick_start_date">2015/11/19</string>
    <string name="ok">SELL IT!</string>
    <string name="cancel">CANCEL</string>
    <string name="address">Address</string>
    <string name="reserveStart">Reservation Start:</string>
    <string name="exampleAddress">Ex: 225 Broadway, San Diego</string>
    <string name="locationError">Please enter a valid address.</string>
</resources>
