<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/textView_Address"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <!-- Text view that will display the address of the marker !-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_name"
            android:id="@+id/textView_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <!-- Text view that will display the name of the seller of the marker !-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_phone"
        android:id="@+id/textView_phone"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <!-- Text view that will display the phone number of the seller of the marker !-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rate"
        android:id="@+id/textView_rate"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView_dollarSign"
            android:layout_marginLeft="10dp" />

        <!-- Text view that will display the rate of the seller of the marker !-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rate"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reserveStart"
        android:id="@+id/view_start"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" />

    <!-- Text view that will display the starting date time of the space !-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startDateTime"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reservation End:"
        android:id="@+id/view_end"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" />

    <!-- Text view that will display the ending date time of the space !-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endDateTime"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

</LinearLayout>